--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    color: #3E3D3D;
 }
 header img, footer img{
     width: 45%;
@@ -58,10 +58,8 @@ main button:nth-child(3){
     background-color: #FAF3E9;
     display: flex;
     flex-wrap: wrap;
-    /* gap: 16px; */
     justify-content: center;
     align-items: center;
-
 }
 .groupArticle article{
     margin: 32px;
@@ -69,4 +67,40 @@ main button:nth-child(3){
     width: 250px;
     border: 1px solid #282c32;
     border-radius: 5px;
+}
+.beginCode{
+    background-color: #282c32;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px;
+    color: #ffffff;
+    
+}
+.startlearn{
+    padding: 30px;
+}
+.startlearn h2{
+    text-align: center;
+
+}
+.startlearn div a{
+    color: #D92950;
+    text-decoration: none;
+
+}
+.startlearn-items{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;    
+}
+.startlearn-items article{
+    width: 300px;
+    height: 60px;
+    background-color:#FAF3E9 ;
+    margin: 16px;
+    text-align: center;
+    border-radius: 5px;
+
+
 }
