--- a/index.css
+++ b/index.css
@@ -104,3 +104,37 @@ main button:nth-child(3){
 
 
 }
+.whritter-title h2{
+    text-align: center;
+    font-size: 36px;
+
+}
+.whritter-form{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    gap: 30px;
+    border: 2px solid bisque;
+}
+.whritter-form-items1{
+    display: flex;
+    justify-content: space-around;
+    gap: 5px;
+
+}
+.whritter-form-items2{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.whritter-form-items2 div textarea{
+    width: 300px;
+    height: 80px;
+    
+}
+.whritter-form-items2{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
