--- a/index.css
+++ b/index.css
@@ -46,14 +46,6 @@ button{
     color:#ffffff ;
     border: none;
 }
-main button:nth-child(3){
-    width: 100px;
-    height: 54px;
-    border-radius: 5px;
-    background-color: #D92950;
-    color:#ffffff ;
-    border: none;
-}
 .groupArticle{
     background-color: #FAF3E9;
     display: flex;
@@ -116,11 +108,13 @@ main button:nth-child(3){
     flex-direction: column;
     gap: 30px;
     border: 2px solid bisque;
+    padding: 20px 0;
 }
 .whritter-form-items1{
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
-    gap: 5px;
+    gap: 15px;
 
 }
 .whritter-form-items2{
@@ -129,12 +123,27 @@ main button:nth-child(3){
     gap: 15px;
 }
 .whritter-form-items2 div textarea{
-    width: 300px;
-    height: 80px;
+    width: 90%;
+    height: 167px;
+    border-radius: 5px;
     
 }
 .whritter-form-items2{
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+.item div input{
+    width: 90%;
+    height: 28px;
+    border-radius: 5px;
+}
+.submit{
+    width: 200px;
+    height: 54px;
+    border-radius: 5px;
+    background-color: #D92950;
+    color:#ffffff ;
+    border: none;
+
 }
