--- a/index.css
+++ b/index.css
@@ -182,6 +182,10 @@ main a{
 }
 
 /* PAGE :NOS COURS */
+.first-section{
+    background-color:#282c32;
+    color: white;
+}
 .first-section, 
 .last-section{
     display: flex;
@@ -194,15 +198,13 @@ main a{
 .mygrid{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px,1fr) );
-    /* grid-template-rows: repeat(12, 1fr); */
-    gap:10px ;
+    gap:5px ;
     
 }
 .mygrid p{
     background-color: #FAF3E9;
-    width: 300px;
-    height: 60px;
-    line-height: 60px;
+    /* height: 60px; */
+    line-height: 100px;
     border-radius: 5px;
 }
 
