--- a/index.css
+++ b/index.css
@@ -35,9 +35,6 @@ nav ul li:last-child a{
     text-decoration: none;
     color: #282c32 ;
 }
-/* main{
-    padding: 5px 20px;
-} */
 button{
     width: 100px;
     height: 28px;
@@ -45,6 +42,9 @@ button{
     background-color: #D92950;
     color:#ffffff ;
     border: none;
+}
+.starthero{
+    padding: 5px;
 }
 .groupArticle{
     background-color: #FAF3E9;
@@ -79,6 +79,7 @@ button{
 main a{
     color: #D92950;
     text-decoration: none;
+    margin-left: 10%;
 
 }
 .startlearn-items{
@@ -184,7 +185,7 @@ main a{
 /* PAGE :NOS COURS */
 .first-section{
     background-color:#282c32;
-    color: white;
+    color: #ffffff;
 }
 .first-section, 
 .last-section{
@@ -203,29 +204,9 @@ main a{
 }
 .mygrid p{
     background-color: #FAF3E9;
-    /* height: 60px; */
     line-height: 100px;
     border-radius: 5px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* footer */
 
