--- a/index.css
+++ b/index.css
@@ -18,14 +18,19 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 5px 20px;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    background-color: #ffffff;
+    width: 100%;
 }
 nav ul{
     display: flex;
     gap: 36px;
     list-style: none;
     padding: 0;
-    width: 150px;
-    
+    width: 150px;    
 }
 nav ul li:first-child a{
     text-decoration: none;
@@ -45,6 +50,7 @@ button{
 }
 .starthero{
     padding: 5px;
+    margin-top: 100px;
 }
 .groupArticle{
     background-color: #FAF3E9;
@@ -186,6 +192,7 @@ main a{
 .first-section{
     background-color:#282c32;
     color: #ffffff;
+    margin-top: 70px;
 }
 .first-section, 
 .last-section{
