--- a/index.css
+++ b/index.css
@@ -6,17 +6,17 @@ body{
     color: #3E3D3D;
 }
 header img, footer img{
-    width: 45%;
-    height: auto;
+    width: 116px;
+    height: 36px;
 }
 main img{
     width:100%;
-    height:auto;
+    height: auto;
 }
 header{
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 25%;
     padding: 5px 20px;
     position: fixed;
     z-index: 100;
@@ -27,10 +27,9 @@ header{
 }
 nav ul{
     display: flex;
-    gap: 36px;
+    gap: 18px;
     list-style: none;
     padding: 0;
-    width: 150px;    
 }
 nav ul li:first-child a{
     text-decoration: none;
@@ -49,8 +48,7 @@ button{
     border: none;
 }
 .starthero{
-    padding: 5px;
-    margin-top: 100px;
+    padding: 64px 10px;
 }
 .groupArticle{
     background-color: #FAF3E9;
@@ -235,11 +233,19 @@ footer {
     height: auto;
 }
 @media (min-width: 768px){
-    body{
+    h1,h2{
+        font-size: 36px;
+    }
+    p{
+        font-size: 18px;
+    }
+    div,p{
+        border-radius: 9px;
+    }
+    header{
         display: flex;
         justify-content: center;
-        flex-direction: column;
-
+        gap: 798px;
     }
     .starthero{
         display: flex;
@@ -251,6 +257,41 @@ footer {
     main img{
         width: 564px;
         height: 376px;
+    }
+    main img:nth-of-type(2){
+        width: 561px;
+        height: 296px;
+    }
+    .groupArticle{
+        padding: 134px 0;
+    }
+    .beginCode{
+        padding: 121px 159px 91px 212px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 43px;
+    
+
+    }
+    .whritter-form-items1{
+        display: flex;
+        flex-direction: row;
+    }
+    .whritter-form-items1 div input{
+        width: 477px;
+        height: 57px;
+        border-radius: 9px;
+    }
+    .whritter-form-items2 div textarea{
+        width: 1035px;
+        height: 167px;
+        border-radius: 9px;
+    }
+    .btn{
+        margin-left: 75%;
+       padding-top: 57px;
     }
 
 }
