--- a/index.css
+++ b/index.css
@@ -425,9 +425,9 @@ footer {
     .first-section{
         display: flex;
         flex-direction: row;
-        gap: 28px;
-        height: 519px;
-        padding: 111px 126px 112px 164px;
+        gap: 18px;
+        height: 300px;
+        padding: 50px 50px;
     }
     .mygrid{
         display: grid;
