--- a/index.css
+++ b/index.css
@@ -14,11 +14,24 @@ main img{
     width:100%;
     height: auto;
 }
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    /* gap: 10%; */
+    z-index: 100;
+    background-color: #ffffff;
+    width: 100%;
+
+
+}
 
 nav ul{
     display: flex;
     gap: 16px;
     list-style: none;
+    margin-right: 10px;
 }
 nav ul li:first-child a{
     text-decoration: none;
