ajustement du header sur tablette

--- a/index.css
+++ b/index.css
@@ -312,6 +312,11 @@ footer {
         display: flex;
         justify-content: center;
         gap: 398px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        
+
     }
     nav ul{
         display: flex;
