--- a/index.css
+++ b/index.css
@@ -23,6 +23,8 @@ header{
     z-index: 100;
     background-color: #ffffff;
     width: 100%;
+    top: 0;
+    left: 0;
 
 
 }
@@ -341,7 +343,6 @@ footer {
     .groupArticle article{
         width: 300px;
         height: 200px;
-        /* padding: 20px; */
     }
     main img{
         width: 400px;
